<resources>
    //descrição de imagens
    <string name="app_name">Studio Ghibli API</string>
    <string name="img_totoro">totoro fofo de lado</string>
    <string name="img_logo">logo studio ghibli</string>
    <string name="catbus">gatonibus andando no escuro</string>
    <string name="favoritar1">pré favorito</string>
    <string name="favoritar2">favorito</string>

    //hint
    <string name="txt_pesquisa"> Pesquisar</string>

    //text
    <string name="txt_ghibli">Pesquise uma obra ou personagem do universo Ghibli</string>
    <string name="loading">Carregando…</string>
    <string name="no_search_term">Informe um termo de busca</string>
    <string name="no_network">verifique sua conexão.</string>
    <string name="no_results">"Nenhum resultado encontrado"</string>
    <string name="str_empty">" "</string>
    <string name="txt_titulo">Título do Filme:</string>
    <string name="txt_original">Título em Kanjis:</string>
    <string name="txt_romanizado">Título Roman.:</string>
    <string name="txt_descricao">Descrição:</string>
    <string name="txt_diretor">Diretor:</string>
    <string name="txt_ano">Ano lançamento:</string>
    <string name="txt_tempo">Duração (min): </string>
    <string name="txt_score">Pontuação:</string>
    <string name="resultado">Encontramos: </string>

    //button
    <string name="btn_search"> &#128270; </string>
    <string name="btn_voltar"><![CDATA[<- voltar]]></string>
    <string name="btncomp">Studio</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>